{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 1048,
  "lineage": "cffd5aef-89f3-5e4d-ea22-5deefca26823",
  "resources": [
    {
      "module": "module.ecs.module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:security-group/sg-06787a2ff1df39c36",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06787a2ff1df39c36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30418,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30418
              }
            ],
            "name": "terraform-20241006051703031200000004",
            "name_prefix": "terraform-",
            "owner_id": "241875560804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-sg"
            },
            "tags_all": {
              "Name": "main-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f225341eba9d4084"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.ecs.module.network.data.aws_vpc.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.ecs.module.network",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-003e878488c5a95d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "todolist-private-an1a-subnet"
                ]
              }
            ],
            "id": "subnet-003e878488c5a95d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "todolist-private-an1a-subnet"
            },
            "vpc_id": "vpc-0f225341eba9d4084"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.ecs.module.network",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0bf71c69599009680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "todolist-public-an1a-subnet"
                ]
              }
            ],
            "id": "subnet-0bf71c69599009680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "todolist-public-an1a-subnet"
            },
            "vpc_id": "vpc-0f225341eba9d4084"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.ecs.module.network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc/vpc-0f225341eba9d4084",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09827dc910e1f5810",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4871452f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "todolist-vpc"
                ]
              }
            ],
            "id": "vpc-0f225341eba9d4084",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d20bbc3e95ed468",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.global_network",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-003e878488c5a95d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "todolist-private-an1a-subnet"
                ]
              }
            ],
            "id": "subnet-003e878488c5a95d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "todolist-private-an1a-subnet"
            },
            "vpc_id": "vpc-0f225341eba9d4084"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.global_network",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0bf71c69599009680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "todolist-public-an1a-subnet"
                ]
              }
            ],
            "id": "subnet-0bf71c69599009680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "todolist-public-an1a-subnet"
            },
            "vpc_id": "vpc-0f225341eba9d4084"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.global_network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc/vpc-0f225341eba9d4084",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09827dc910e1f5810",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4871452f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "todolist-vpc"
                ]
              }
            ],
            "id": "vpc-0f225341eba9d4084",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d20bbc3e95ed468",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:internet-gateway/igw-0e3468aa6b283b005",
            "id": "igw-0e3468aa6b283b005",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-igw"
            },
            "tags_all": {
              "Name": "todolist-igw"
            },
            "vpc_id": "vpc-0f225341eba9d4084"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:route-table/rtb-08085769fdfec22e1",
            "id": "rtb-08085769fdfec22e1",
            "owner_id": "241875560804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3468aa6b283b005",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todolist-public-route-table"
            },
            "tags_all": {
              "Name": "todolist-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f225341eba9d4084"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0901ae08792d780cf",
            "route_table_id": "rtb-08085769fdfec22e1",
            "subnet_id": "subnet-0bf71c69599009680"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-003e878488c5a95d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003e878488c5a95d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-private-an1a-subnet"
            },
            "tags_all": {
              "Name": "todolist-private-an1a-subnet"
            },
            "vpc_id": "vpc-0f225341eba9d4084"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0bf71c69599009680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf71c69599009680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-public-an1a-subnet"
            },
            "tags_all": {
              "Name": "todolist-public-an1a-subnet"
            },
            "vpc_id": "vpc-0f225341eba9d4084"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc/vpc-0f225341eba9d4084",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0754ecbc63d02a316",
            "default_route_table_id": "rtb-00d20bbc3e95ed468",
            "default_security_group_id": "sg-0afe1a22ec88b397b",
            "dhcp_options_id": "dopt-4871452f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f225341eba9d4084",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d20bbc3e95ed468",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-vpc"
            },
            "tags_all": {
              "Name": "todolist-vpc"
            }
          }
        }
      ]
    }
  ]
}